kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-api-selector
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: nodejs-api-selector
        version: current
    spec:
      containers:
      - name: nodejs-api-app
        image: ibmcase/nodejs-api
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            name: http
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
